# pickle

./: .gitignore  CMakeLists.txt  README.md
imaginator/: README.md
logger/: README.md
test/: README.md  test_job.cpp
